--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "cd-livros",
+  "name": "api-book-record",
   "version": "1.0.0",
-  "description": "Um projeto para cadastro de livros",
+  "description": "api-book-record",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "keywords": [],
-  "author": "Seu Nome",
+  "author": "Danubia",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1020.0",
     "express": "^4.17.1",
     "express-validator": "^7.2.0",
-    "multer": "^1.4.2",
-    "pg": "^8.7.1"
+    "multer": "^1.4.2"
   }
 }
