--- a/.gitignore
+++ b/.gitignore
@@ -121,14 +121,13 @@ dist
 # FuseBox cache
 .fusebox/
 
-# DynamoDB Local files
-.dynamodb/
-
 # TernJS port file
 .tern-port
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+.vscode
+
 
 # yarn v2
 .yarn/cache
